<resources>
    <string name="app_name">CovIndia</string>
    <string name="home">Home</string>
    <string name="discover">Discover</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="region">REGION</string>
    <string name="total">TOTAL</string>
    <string name="active">ACTIVE</string>
    <string name="rcvrd">RCVrD</string>
    <string name="death">DEATH</string>

</resources>