<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:padding="8dp"
        android:text="@string/region"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center_horizontal"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:padding="8dp"
        android:text="@string/total"
        android:textAllCaps="true"
        android:textColor="@color/dark_red"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center_horizontal"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="8dp"
        android:text="@string/active"
        android:textAllCaps="true"
        android:textColor="@color/dark_blue"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center_horizontal"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="8dp"
        android:text="@string/rcvrd"
        android:textAllCaps="true"
        android:textColor="@color/dark_green"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center_horizontal"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="8dp"
        android:text="@string/death"
        android:textAllCaps="true"
        android:textColor="@color/dark_yellow"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center_horizontal" />


</LinearLayout>